--- a/demo/app/app.html
+++ b/demo/app/app.html
@@ -5,10 +5,14 @@
 </head>
 <body>
     <h1>{{title}}</h1>
-    <span>{{mainContent}}</span>
+    <!--<span>ver: {{appVersion.ver}} logged user: {{userInfo.username}}</span>
+    
+    <div data-ng-include="'todoListView.html'"></div>-->
+
     <script src="../Scripts/stacktrace.js"></script>
     <script src="../Scripts/angular.js"></script>
     <script src="services.js"></script>
+    <script src="todoListCtrl.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
