--- a/presentation/index.html
+++ b/presentation/index.html
@@ -87,7 +87,7 @@
                     <ul>
                         <li class="fragment">Costruire e comporre oggetti.</li>
                         <li class="fragment">Delegare la creazione degli oggetti ad una autorità terza (nessun NEW esplicito).</li>
-                        <li class="fragment">Delegare la gestione del ciclo di vita as una autorità terza (nessun RELEASE esplicito).</li>
+                        <li class="fragment">Delegare la gestione del ciclo di vita ad una autorità terza (nessun RELEASE esplicito).</li>
                         <li class="fragment">Se vi chiedete dove 'sta di casa' la vostra app: vive nell'IoC container.</li>
                     </ul>
                 </section>
